--- a/omniNotes/src/main/res/layout/fragment_list.xml
+++ b/omniNotes/src/main/res/layout/fragment_list.xml
@@ -118,10 +118,10 @@
             layout="@layout/fab"/>
 
     <ImageView
-            android:id="@+id/expanded_image"
-            android:layout_width="match_parent"
-            android:scaleType="centerCrop"
-            android:layout_height="match_parent"/>
+        android:id="@+id/expanded_image"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop" />
 
     <android.support.design.widget.CoordinatorLayout
             android:layout_width="match_parent"
