--- a/omniNotes/src/main/res/layout/activity_password.xml
+++ b/omniNotes/src/main/res/layout/activity_password.xml
@@ -44,23 +44,26 @@
 
             <EditText
                 android:id="@+id/password"
+                style="@style/Text.Normal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
+                android:fontFamily="sans-serif"
                 android:gravity="center_horizontal"
                 android:hint="@string/insert_new_password"
                 android:inputType="textPassword"
-                style="@style/Text.Normal" />
+                android:typeface="normal" />
 
             <EditText
                 android:id="@+id/password_check"
+                style="@style/Text.Normal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:fontFamily="sans-serif"
                 android:gravity="center_horizontal"
                 android:hint="@string/confirm_new_password"
-                android:inputType="textPassword"
-                style="@style/Text.Normal" />
+                android:inputType="textPassword" />
 
             <com.neopixl.pixlui.components.textview.TextView
                 android:layout_width="match_parent"
@@ -73,32 +76,35 @@
 
             <EditText
                 android:id="@+id/question"
+                style="@style/Text.Normal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
+                android:fontFamily="sans-serif"
                 android:gravity="center_horizontal"
-                android:hint="@string/settings_password_question"
-                style="@style/Text.Normal" />
+                android:hint="@string/settings_password_question" />
 
             <EditText
                 android:id="@+id/answer"
+                style="@style/Text.Normal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:fontFamily="sans-serif"
                 android:gravity="center_horizontal"
                 android:hint="@string/settings_password_answer"
-                android:inputType="textPassword"
-                style="@style/Text.Normal" />
+                android:inputType="textPassword" />
 
             <EditText
                 android:id="@+id/answer_check"
+                style="@style/Text.Normal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:fontFamily="sans-serif"
                 android:gravity="center_horizontal"
                 android:hint="@string/settings_password_answer_check"
-                android:inputType="textPassword"
-                style="@style/Text.Normal" />
+                android:inputType="textPassword" />
 
             <include layout="@layout/password_buttons" />
 
