--- a/omniNotes/src/main/res/layout/intro_slide_communities.xml
+++ b/omniNotes/src/main/res/layout/intro_slide_communities.xml
@@ -37,32 +37,37 @@
     <LinearLayout android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical" android:gravity="center_horizontal">
+
         <ImageView
-                android:id="@+id/intro_image_community_googleplus"
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:padding="@dimen/intro_bottom_padding"
-                android:src="@drawable/gplus"/>
+            android:id="@+id/intro_image_community_googleplus"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="@dimen/intro_bottom_padding"
+            android:src="@drawable/gplus"
+            android:visibility="visible" />
+
         <ImageView
-                android:id="@+id/intro_image_community_facebook"
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:padding="@dimen/intro_bottom_padding"
-                android:src="@drawable/facebook"/>
+            android:id="@+id/intro_image_community_facebook"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="@dimen/intro_bottom_padding"
+            android:src="@drawable/gplus"
+            android:visibility="invisible" />
     </LinearLayout>
 
     <TextView
-            android:id="@+id/intro_description"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:textColor="#ffffff"
-            android:paddingLeft="64dp"
-            android:paddingRight="64dp"
-            android:textSize="16sp"
-            android:paddingTop="@dimen/intro_top_padding"
-            android:paddingBottom="@dimen/intro_bottom_padding"/>
+        android:id="@+id/intro_description"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:paddingBottom="@dimen/intro_bottom_padding"
+        android:paddingLeft="64dp"
+        android:paddingRight="64dp"
+        android:paddingTop="@dimen/intro_top_padding"
+        android:textColor="#ffffff"
+        android:textSize="16sp"
+        android:visibility="invisible" />
     <TextView
             android:layout_width="fill_parent"
             android:layout_height="64dp"/>
