--- a/omniNotes/src/main/res/xml/settings_sync_import_export.xml
+++ b/omniNotes/src/main/res/xml/settings_sync_import_export.xml
@@ -16,6 +16,7 @@
   -->
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:fitsSystemWindows="true">
 
     <Preference
@@ -25,10 +26,5 @@
     <Preference
         android:key="settings_import_data"
         android:title="@string/settings_import" />
-
-    <Preference
-        android:key="settings_import_from_springpad"
-        android:title="@string/settings_import_from_springpad"
-        android:summary="@string/settings_import_from_springpad_summary" />
 
 </PreferenceScreen>
